Move logo into demo folder

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <img class="logo" src="./../src/logo.svg" alt="Logo: AdLightbox.js" />
+    <img class="logo" src="./logo.svg" alt="Logo: AdLightbox.js" />
 </header>
 
 <main>
